# autonomous-cto-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: architect.py  github_mcp.py  mcp.py  planner.py  retriever.py  reviewer.py  router.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  github.py  github_code_ingest.py  github_ingest.py  mcp.py  search.py
backend/app/core/: langsmith.py  retrieval.py
backend/app/core/llm/: gemini.py  llm_service.py
backend/app/core/prompts/: analysis_prompt.py  cto_prompt.py
backend/app/core/rag/: chunker.py  embedder.py  parser.py  retriever.py
backend/app/core/vectorstore/: qdrant_store.py
backend/app/db/: postgres.py  qdrant.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/app/mcp/: github_mcp.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: chat.py  documents.py  search.py
backend/app/services/: architecture_graph.py  dependency_graph.py  document_service.py  github_chunker.py  github_code_ingestion.py  github_ingestion.py  github_search.py  github_services.py  llm_service.py  repository_health.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ArchitectureGraph.jsx  FileTree.css  FileTree.jsx
