[project]
name = "cto-agent"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.9.0",
    "google-genai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "httpx>=0.28.0",
    "langsmith>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"